Added working collision, enhanced ecs synchronization